<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_family"
            android:icon="@drawable/family"
            android:title="@string/menu_family" />
        <item
            android:id="@+id/nav_society"
            android:icon="@drawable/society"
            android:title="@string/menu_society" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friends"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/family"
            android:title="@string/menu_work" />
    </group>
</menu>